# CursorCode1

flyash-phreeqc-ml/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  app_ui.py  conftest.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
flyash-phreeqc-ml/.streamlit/: config.toml
flyash-phreeqc-ml/docs/: ai_architecture.md  ai_configuration.md  assistant_agent.md  comparison_inclusion.md  database_compatibility.md  defining_a_material.md  deployment.md  input_format.md  literature_agent.md  mapping_rules.md  mass_balance.md  material_profiles.md  material_release.md  ml_surrogate_engine.md  model_prediction_format.md  monday_experiment_protocol.md  phreeqc_execution.md  refactor_plan.md  simulation_planner.md  simulation_runs.md  simulation_strategy.md  target_matching.md  virtual_lab_machine_runner.md  virtual_lab_machines.md
flyash-phreeqc-ml/experiments/: README.md
flyash-phreeqc-ml/flyash_phreeqc_ml/: __init__.py  attribution.py  audit.py  calculations.py  config.py  dissolution_workbook.py  import_mapping.py  mapping_table.py  mass_balance.py  phreeqc_runner.py  profiles.py  replicates.py  report.py  run_manager.py  scenarios.py  units.py
flyash-phreeqc-ml/scripts/: 01_parse_phreeqc.py  02_parse_icp.py  03_build_master_dataset.py  04_make_plots.py  05_compare_experimental.py  06_generate_experiment_plan.py  07_validate_experimental_data.py  08_sustainability_score.py  09_generate_simulations.py  10_sample_design.py  _path_setup.py  run_phase1.py
flyash-phreeqc-ml/tests/: test_agent.py  test_agent_council.py  test_ai_boundary.py  test_ai_client.py  test_ai_config.py  test_ai_import.py  test_ai_live_diagnostics.py  test_ai_settings_ui.py  test_app_tabs_smoke.py  test_assistant.py  test_attribution.py  test_audit.py  test_batch_executor.py  test_calculations.py  test_chat_setup_parser.py  test_comparison.py  test_database_compatibility.py  test_demo_state_workflow.py  test_dissolution_workbook.py  test_e2e_workflow.py  test_experimental_ingestion.py  test_experiments.py  test_icp_parser.py  test_icp_processor.py  test_import_mapping.py  test_inclusion.py  test_incompleteness_model.py  (+38 more)
(+182 files in other folders)
