[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flyash-phreeqc-ml"
version = "0.1.0"
description = "ML-assisted geochemical modeling of fly-ash systems (PHREEQC + experimental ICP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["flyash_phreeqc_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
