[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flyash-phreeqc-ml"
version = "0.1.0"
description = "ML-assisted geochemical modeling of fly-ash systems (PHREEQC + experimental ICP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["flyash_phreeqc_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Heavy/long-running tests are marked @pytest.mark.slow and excluded from the default
# run; include them with `pytest -m slow`. (No test is currently marked slow — the GP
# fast mode keeps the ML tests quick — but the mechanism is in place for future ones.)
addopts = "-m 'not slow'"
markers = [
    "slow: heavy/long-running test, excluded from the default run (use -m slow to include)",
]
